# PyRu

./: .gitignore  CONTRIBUTING.md  JOURNAL.md  LICENSE  Makefile  README.md
.github/workflows/: python.yml  rust.yml
bench/: analyze.py
bench/results/: features_python_fd59746.json  features_rust_2f437a2.txt  ingest_python_51116ea.json  ingest_python_c470cb3.json  ingest_rust_319f22a.txt  query_python_cec199c.json  serve_python_3329356.json  serve_rust_3329356.txt  storage_python_3343401.json  storage_rust_3343401.txt
data/: README.md
docs/post/: post.md
python/: pyproject.toml
python/benches/: bench_features.py  bench_ingest.py  bench_query.py  bench_serve.py  bench_storage.py
python/src/cfb/: __init__.py  features.py  ingest.py  models.py  query.py  serve.py  storage.py
python/tests/: test_conformance.py  test_cross_language.py  test_ingest.py  test_query.py  test_storage.py
rust/: Cargo.toml
rust/crates/cfb-features/: Cargo.toml
rust/crates/cfb-features/benches/: bench_features.rs
rust/crates/cfb-features/src/: arrow_impl.rs  lib.rs  models.rs  polars_impl.rs  streaming.rs
rust/crates/cfb-ingest/: Cargo.toml
rust/crates/cfb-ingest/benches/: bench_ingest.rs
rust/crates/cfb-ingest/src/: batch.rs  lib.rs  models.rs  source.rs  synth.rs
rust/crates/cfb-query/: Cargo.toml
rust/crates/cfb-query/src/: datafusion_engine.rs  lib.rs  polars_engine.rs
rust/crates/cfb-serve/: Cargo.toml
rust/crates/cfb-serve/benches/: bench_serve.rs
rust/crates/cfb-serve/src/: main.rs
rust/crates/cfb-storage/: Cargo.toml
rust/crates/cfb-storage/benches/: bench_storage.rs
rust/crates/cfb-storage/src/: lib.rs  reader.rs  writer.rs
scripts/: download_data.sh  replay_stream.py  run_all_benches.sh
spec/: contract.md  feature_definitions.md  generate_fixtures.py  queries.sql  storage_layout.md
spec/conformance_cases/: case_01_expected.json  case_01_single_trade.jsonl  case_02_expected.json  case_02_two_same_price.jsonl  case_03_expected.json  case_03_rv_nonzero.jsonl  case_04_expected.json  case_04_window_expiry.jsonl  case_05_expected.json  case_05_ofi_mixed.jsonl
