[workspace]
members = [
    "crates/cfb-ingest",
    "crates/cfb-features",
    "crates/cfb-storage",
    "crates/cfb-query",
    "crates/cfb-serve",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "MIT"
authors = ["Diego Go <diego.gomes87@gmail.com>"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }

# Arrow / Parquet / feature engine
arrow = { version = "53", features = ["prettyprint"] }
arrow-array = "53"
arrow-schema = "53"
parquet = { version = "53", features = ["async"] }
polars = { version = "0.43", features = [
    "lazy", "rolling_window_by", "temporal", "dynamic_group_by",
    "parquet", "json", "serde",
] }
datafusion = "43"
deltalake = { version = "0.21", features = ["datafusion"] }

# HTTP serving
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Testing
insta = { version = "1", features = ["json"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"
