[package]
name = "cfb-serve"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Feature HTTP serving: Axum app with in-process Arrow cache"

[[bin]]
name = "cfb-serve"
path = "src/main.rs"

[dependencies]
cfb-features = { path = "../cfb-features" }
cfb-query = { path = "../cfb-query" }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tokio = { workspace = true }
