[package]
name = "cfb-storage"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Partitioned Parquet / Delta Lake writer and reader"

[dependencies]
cfb-ingest = { path = "../cfb-ingest" }
cfb-features = { path = "../cfb-features" }
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
parquet = { workspace = true }
deltalake = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tokio = { workspace = true }
